Fixed issues with the trust and ban interactions and cleaned up permissions lists